--- a/src/app/app.html
+++ b/src/app/app.html
@@ -183,6 +183,14 @@
 </style>
 
 <main class="main">
+  <div class="tutorial-section">
+    <header class="brand-name">
+      <img class="brand-logo" src="/assets/logo.svg" alt="logo" aria-hidden="true" />
+    </header>
+    <section class="content">
+      <app-home></app-home>
+    </section>
+  </div>
   <div class="content">
     <div class="left-side">
       <svg
