added required housing location info and dummy data to perform inerpolation in housing-location.html

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,5 @@
 :root {
   --primary-color: #4CAF50; /* Your desired primary color */
   --secondary-color: #FFC107; /* Example secondary color */
+  --accent-color: #7c600b59;
 }
