--- a/src/app/app.css
+++ b/src/app/app.css
@@ -10,3 +10,9 @@ header {
 .content {
   padding: var(--content-padding);
 }
+.brand-logo {
+  height: 250px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 30px 30px 0 0;
+}
