--- a/src/app/app.css
+++ b/src/app/app.css
@@ -10,6 +10,14 @@ header {
 .content {
   padding: var(--content-padding);
 }
+.brand-name {
+  background-color: #333; /* Dark background for the header */
+  padding: 15px 20px; /* Vertical and horizontal padding */
+  align-items: center; /* Vertically align items in the center */
+  justify-content: space-between; /* Space out items (logo and navigation) */
+  color: #fff; /* Text color for header content */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+}
 .brand-logo {
   height: 250px;
   width: 100%;
